@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <addons>
-<addon id="plugin.video.cumination" name="Cumination" provider-name="Cumination" version="1.1.181">
+<addon id="plugin.video.cumination" name="Cumination" provider-name="Cumination" version="1.1.182">
 <requires>
 <import addon="script.module.six" />
 <import addon="script.module.kodi-six" />
