@@ -1,0 +1,36 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>PeachUrNet Fixture</title>
+</head>
+<body>
+    <main>
+        <section class="video-grid">
+            <article class="video-card" data-duration="02:10:11">
+                <a class="card-link" href="/en/video/ssni-123">
+                    <div class="thumb" style="background-image:url('https://cdn.peachurnet.com/ssni123.jpg');"></div>
+                    <h3 class="video-title">Sensual Sample One</h3>
+                    <span class="meta duration">02:10:11</span>
+                    <span class="meta views">12,345 views</span>
+                </a>
+            </article>
+            <article class="video-card">
+                <a class="card-link" href="/en/video/abcd-999">
+                    <img data-src="https://cdn.peachurnet.com/abcd999.jpg" alt="Second sample" />
+                    <div class="info">
+                        <h3 class="video-title">Another Peach Showcase</h3>
+                        <span class="meta category">Uncensored</span>
+                        <span class="meta date">2025-05-15</span>
+                    </div>
+                </a>
+            </article>
+        </section>
+    </main>
+    <nav class="pagination">
+        <ul>
+            <li class="next"><a href="/en/page/2">Next</a></li>
+        </ul>
+    </nav>
+</body>
+</html>
